# Group6_Summer-Project

./: .env.example  .gitignore  AGENTS.md  DB+ML_V2_deploy_sop.md  DB+ML_deploy_sop.md  README.md  SPRINT5_TASKS.md  [7.21]DB+ML_V2_deploy_sop.md  docker-compose.yml  openapi.yaml  pyproject.toml
.claude/: skills
.github/workflows/: backend_CI.yml  backend_ci.yml  data_ci.yml  deploy_ec2.yml  frontend_mob_ci.yml  frontend_web_ci.yml
.mimocode/plans/: 1781164775878-stellar-cabin.md
Data+ML/: README.md  test_data_skeleton.py
Data+ML/plan/: venue_coverage_sop_zh.md
backend/: .env.example  README.md  pyproject.toml
backend/migrations/: 002_create_venues.sql  003_seed_venues.sql
backend/scripts/: backfill_venue_embeddings.py
backend/src/: app.py  auth.py  celery_app.py  db.py  district_leaderboard.py  gemini_client.py  google_maps_client.py  main.py  medical_crypto.py  mock_data.py  response_cache.py  settings.py  sos_buffer.py  tasks.py  token_blacklist.py
backend/tests/: conftest.py  test_account_deletion_integration.py  test_app_state.py  test_auth_login.py  test_auth_register.py  test_auth_unit.py  test_backfill_venue_embeddings.py  test_ci.py  (+29 more)
docs/: Sprint3-4_data-execution-SOP.md  backend-p0-handoff.md  telemetry-feed-contract.md  venues_export_20260718_schema.md
mockups/: Mobile Mockup.txt  Web Mockup.txt
src/: app.py  auth.py  db.py  main.py  mock_data.py  settings.py
tests/: conftest.py  test_app_state.py  test_auth_login.py  test_health.py  test_medical.py  test_medical_contract.py  test_notification_preferences.py  test_seed_venues_sql.py
(+859 files in other folders)
