[tool.poetry]
name = "ClearPath"
version = "0.1.0"
description = "Waze-style mobile and web app for vulnerable tourists with real-time accessibility alerts, crowd reports, and ML-powered busyness predictions in Manhattan"
authors = ["Emmett Quinn, Casey Liew, Hsu Ching Yun, David Irving, Joanna Saheed, Fangxun Wu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
